# python-intro

./: README.md
zadanie_1/: zadanie_1.py
zadanie_2/: .coverage  app.py  test_app.py
zadanie_2/htmlcov/: app_py.html  class_index.html  function_index.html  index.html  status.json  test_app_py.html
zadanie_3/merito_library/: .gitignore  README.md  pyproject.toml
zadanie_3/merito_library/src/merito_library/: area_calc.py  encode_decode.py  text_utils.py
zadanie_3/merito_library/tests/: test_area_calc.py  test_encode_decode.py  test_text_utils.py
zadanie_4/: README.md  zadanie4.py
zadanie_5/: README.md
zadanie_5/examples/: requests_example.py  whois_example.py
