[build-system]
requires = ["setuptools>=61.0]
build-backend = "setuptools.build_meta"

[project]
name = "merito-library"
version = "0.1.0"
authors = [ {name="Mateusz Tołpa"} ]
description = "Library for simple operations made for lab exercise"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
    "Intended Audience :: Developers, Students",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
keywords = ["utils","encode","decode","text","area"]
[tool.setuptools.packages.find]
where = ["src"]


